--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -14,7 +14,7 @@ platforms:
       box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_provisionerless.box
   - name: centos-6.5
     driver_config:
-      box: opscode-ubuntu-12.04
+      box: opscode-centos-6.5
       box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.5_chef-provisionerless.box
 
 suites:
@@ -23,4 +23,4 @@ suites:
       - recipe[monit::default]
     attributes:
       monit:
-        source: installer
+#        source: installer
